# win-launcher

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REQUIREMENTS.md  index.html  last-release-notes.md  package-lock.json  package.json  run_dev.bat  vite.config.ts
.claude/: REQUIREMENTS.snapshot.md
.claude/skills/release-flow/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: README_IMAGE_PROMPT.md  README_IMAGE_SPEC.md
manifests/h/hidecode365/WinLauncher/0.1.0/: hidecode365.WinLauncher.installer.yaml  hidecode365.WinLauncher.locale.en-US.yaml  (+1 more)
scripts/: generate-latest-json.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  path_paste.rs  recent_files.rs
src/components/: AboutSettings.tsx  CalcSettings.tsx  ClipboardPanel.tsx  ClipboardSettings.tsx  ConvertSettings.tsx  ErrorBoundary.tsx  FeatureBlock.tsx  FeatureToggle.tsx  FileSearchSettings.tsx  FolderDetailSettingsModal.tsx  GeneralSettings.tsx  OcrPreview.tsx  OcrSettings.tsx  PathPasteSettings.tsx  PathPasteWizard.tsx  RecentFilesSettings.tsx  ResultList.tsx  SearchBox.tsx  SettingsPanel.tsx  StatusFooter.tsx  SystemCommandModal.tsx  SystemCommandSettings.tsx  UpdateDialog.tsx  WebSearchRow.tsx  WebSearchSettings.tsx
src/hooks/: useClipboard.ts  useHotkey.ts  useOcr.ts  useScrollSelectedIntoView.ts  useSearch.ts  useSettings.ts  useUpdater.ts
src/lib/: format.ts  window.ts
tools/: check-download-stats.ps1
